@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-10-09T02:04:49Z",
-  "count" : 2,
-  "count_minmax" : [ 2, 3 ],
-  "count_decinc" : [ -1, +3 ],
-  "uniques" : 2,
-  "uniques_minmax" : [ 2, 2 ],
-  "uniques_decinc" : [ -0, +2 ]
+  "timestamp" : "2022-10-09T08:26:54Z",
+  "count" : 1,
+  "count_minmax" : [ 1, 3 ],
+  "count_decinc" : [ -2, +3 ],
+  "uniques" : 1,
+  "uniques_minmax" : [ 1, 2 ],
+  "uniques_decinc" : [ -1, +2 ]
 }
