@@ -1,16 +1,16 @@
 {
-  "timestamp" : "2022-10-09T02:04:49Z",
+  "timestamp" : "2022-10-09T08:26:54Z",
   "count_outdated" : 2475,
   "uniques_outdated" : 627,
-  "count" : 2502,
-  "uniques" : 644,
+  "count" : 2503,
+  "uniques" : 645,
   "clones" : [
     {
       "timestamp": "2022-09-25T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 2, 3 ],
-      "uniques": 2,
-      "uniques_minmax": [ 2, 2 ]
+      "count": 1,
+      "count_minmax": [ 1, 3 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 2 ]
     },
     {
       "timestamp": "2022-09-26T00:00:00Z",
@@ -67,6 +67,13 @@
       "count_minmax": [ 2, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-10-09T00:00:00Z",
+      "count": 2,
+      "count_minmax": [ 2, 2 ],
+      "uniques": 2,
+      "uniques_minmax": [ 2, 2 ]
     }
   ]
 }
