@@ -1,3 +1,11 @@
+2022-10-09T08:26:54Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/3213471135
+* notice: last 14d: unq all: 10 28
+* notice: prev accum: outdated-unq outdated-all / unq all: 627 2475 / 644 2502
+* notice: next accum: outdated-unq outdated-all / unq all: 627 2475 / 645 2503
+* notice: prev exec diff / last date diff / accum: unq all: +2 +2 -1 -1 / +2 +2 -0 -0 / 2 2
+* notice: removed / changed dates: [] / [2022-09-25 2022-10-09]
+
 2022-10-09T02:04:49Z:
 * notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/3212540157
 * notice: last 14d: unq all: 9 27
